| Summary: | ASTERISK-28249: res_monitor: Segfault with Monitor(wav,file,i) | ||
| Reporter: | Valentin Vidić (vvidic) | Labels: | |
| Date Opened: | 2019-01-20 12:13:28.000-0600 | Date Closed: | 2019-01-22 06:35:22.000-0600 |
| Priority: | Major | Regression? | |
| Status: | Closed/Complete | Components: | Resources/res_monitor |
| Versions: | 16.1.1 | Frequency of Occurrence | Occasional |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | Asterisk sometimes segfaults if a channel is running a Monitor with option i - Skip recording of input stream. Crash happens when the code tries to access read_stream field set to NULL. This is detected with an old Asterisk 11 but it seems all versions have the same problem in the code at least. | ||
| Comments: | By: Asterisk Team (asteriskteam) 2019-01-20 12:13:29.634-0600 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. By: Friendly Automation (friendly-automation) 2019-01-21 13:18:02.866-0600 Change 10893 merged by Friendly Automation: channel.c: Fix segfault with Monitor(wav,file,i) [https://gerrit.asterisk.org/10893|https://gerrit.asterisk.org/10893] By: Friendly Automation (friendly-automation) 2019-01-21 13:19:44.028-0600 Change 10896 merged by Joshua C. Colp: channel.c: Fix segfault with Monitor(wav,file,i) [https://gerrit.asterisk.org/10896|https://gerrit.asterisk.org/10896] By: Friendly Automation (friendly-automation) 2019-01-21 13:23:05.252-0600 Change 10895 merged by Joshua C. Colp: channel.c: Fix segfault with Monitor(wav,file,i) [https://gerrit.asterisk.org/10895|https://gerrit.asterisk.org/10895] | ||